--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "axios": "^0.19.2",
+    "fibers": "^4.0.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
+    "sass": "^1.26.2",
     "typescript": "^3.8.3"
   },
   "scripts": {
@@ -38,6 +40,9 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^9.5.0"
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/react-hooks": "^3.2.1",
+    "eslint-plugin-flowtype": "^4.6.0",
+    "react-test-renderer": "^16.13.0"
   }
 }
