--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@testing-library/react": "^9.5.0",
     "@testing-library/react-hooks": "^3.2.1",
+    "axios-mock-adapter": "^1.17.0",
     "eslint-plugin-flowtype": "^4.6.0",
     "react-test-renderer": "^16.13.0"
   }
